[package]
name = "hehir"
version = "0.1.0"
edition = "2024"
authors = ["Hartley McGuire <skipkayhil@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
http-body-util = "0.1.3"
http-body = "1.0.1"
bytes = "1.10.1"
percent-encoding = "2.3.2"
